# MeteoFRtoEPW

./: .gitignore  BRL.py  README.md  __init__.py  b.ipynb  io.py  pyproject.toml  rad.py  setup.py
.spyproject/config/: workspace.ini
meteofrtoepw/: __init__.py  brl.py  io.py  solar.py
notebook/: test_global.ipynb
old/: maxwell.py  rad.py
tests/: test_brl.py  test_solar.py
tutorials/: convert.py
